--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
 # suppress inspection "UnusedProperty" for whole file
 redis.config.host=172.16.0.252
-redis.config.port=8090
-redis.config.pool.maxsize=100;
+redis.config.port=6379
+redis.config.pool.maxsize=100
