--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.es.core.TestPageProcessor</mainClass>
+                                    <mainClass>com.es.core.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
